Fixed hints being behind images

--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ hr {
 .hint {
   display: block;
   color: rgba(0, 0, 0, 0.3);
+  z-index: 1000 !important;
 }
 .hint:hover {
 	-webkit-animation: pulsate 1.2s ease infinite;
